# kivi

./: CLAUDE.md  Cargo.toml  box.stl  index.html  package.json  test.html  test_monitor.sh
examples/: app.rs  monitor.rs  monitor_daemon.rs
src/: App.vue  clip.ts  frame.ts  lib.rs  main.rs  renderer.ts  style.css  timeseries.ts
src/components/: ObjectInfoPanel.vue  PlaybackBar.vue
