[package]
name = "kivi"
version = "0.1.0"
edition = "2024"

[dependencies]
# axum = { version = "0.8", features = ["ws", "json", "macros"] }
# tokio = { version = "1.0", features = ["full"] }
# tower-http = { version = "0.6", features = ["fs", "trace"] }
# futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
tungstenite = "0.28.0"
nalgebra = "0.34.1"